--- a/examples/resume/certifications.tex
+++ b/examples/resume/certifications.tex
@@ -15,8 +15,8 @@
   \cventry
     {Build Mobile Applications with SAP Cloud Platform Mobile Services (227.8/300)} % Certificate designation
     {\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
-    %{Online} % Location
-    {} % Location
+    {Online} % Location
+    %{} % Location
     %{June 13, 2018 - July 26, 2018} % Date(s)      
     {Aug. 2019 - Oct. 2019} % Date(s)          
     {
