--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -29,7 +29,7 @@
         Game engine development (JOT). %Implementation of techniques for state management in MMOGs.         
         %Integration of the proposed solution with a network simulator to test the solution(s) performance.         
         Implementation of a novel pathfinding algorithm, and two novel techniques to integrate influence maps with pathfinders. Writing of journal/conference scientific articles and thesis, presentation of conference articles, and thesis oral presentation/defense.}
-        \item[] {\textbf{Technologies:} \textcolor{rainbowcolor-green}{GIT}, \textcolor{rainbowcolor-green}{NetBeans}, \textcolor{rainbowcolor-indigo}{Java 1.6-1.8}, \textcolor{rainbowcolor-indigo}{GridGain}, \textcolor{rainbowcolor-indigo}{JGroups}, \textcolor{rainbowcolor-indigo}{JogAmp}, \textcolor{rainbowcolor-indigo}{Apache Maven}, \textcolor{rainbowcolor-indigo}{Apache Math Commons}, %C++, Omnet++, Eclipse, LibreOffice,
+        \item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{GIT}, \textcolor{rainbowcolor-olive}{NetBeans}, \textcolor{rainbowcolor-indigo}{Java 1.6-1.8}, \textcolor{rainbowcolor-indigo}{GridGain}, \textcolor{rainbowcolor-indigo}{JGroups}, \textcolor{rainbowcolor-indigo}{JogAmp}, \textcolor{rainbowcolor-indigo}{Apache Maven}, \textcolor{rainbowcolor-indigo}{Apache Math Commons}, %C++, Omnet++, Eclipse, LibreOffice,
 \textcolor{rainbowcolor-indigo}{LaTeX}, %Beamer, 
 \textcolor{rainbowcolor-orange}{Linux Mint}, \textcolor{rainbowcolor-orange}{Fedora}, \textcolor{rainbowcolor-orange}{Ubuntu}, \textcolor{rainbowcolor-orange}{OpenSuse}, \textcolor{rainbowcolor-orange}{Windos XP-7}
 %, TexMaker, JabRef
@@ -66,7 +66,7 @@
         \item[] {\textbf{Supervisor:} \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
 		\item[] {\textbf{Context:} Extending a 2D fluids simulation algorithm to 3D in the GPU resorting to CUDA.}
 		\item[] {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding fluid simulation in virtual environments. Porting a 2D fluids simulation (Jos Stam Stable fluids) algorithm to 3D in the GPU resorting to CUDA. Writing of journal/conference scientific articles and thesis, presentation of conference articles, and thesis oral presentation/defense.}
-        \item[] {\textbf{Technologies:}  \textcolor{rainbowcolor-green}{Visual Studio 2005-2008}, \textcolor{rainbowcolor-indigo}{CUDA 2.0}, \textcolor{rainbowcolor-indigo}{C/C++}, 
+        \item[] {\textbf{Technologies:}  \textcolor{rainbowcolor-olive}{Visual Studio 2005-2008}, \textcolor{rainbowcolor-indigo}{CUDA 2.0}, \textcolor{rainbowcolor-indigo}{C/C++}, 
 \textcolor{rainbowcolor-indigo}{LaTeX}, %Beamer, 
 \textcolor{rainbowcolor-orange}{Linux Mint}, \textcolor{rainbowcolor-orange}{Fedora}, \textcolor{rainbowcolor-orange}{Ubuntu}, \textcolor{rainbowcolor-orange}{OpenSuse}, \textcolor{rainbowcolor-orange}{Windos XP-7}       
         %, TexMaker, JabRef
