--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-%\cvsectionspecifiedcolor{rainbowcolor-green}{\faBriefcase \acvHeaderIconSep Experience}
+%\cvsectionspecifiedcolor{rainbowcolor-olive}{\faBriefcase \acvHeaderIconSep Experience}
 \cvsectionspecifiedcolor{awesome-red}{\faBriefcase \acvHeaderIconSep Experience}
 
 %Adaptive – modifying the system to cope with changes in the software environment (DBMS, OS) [4]
@@ -28,13 +28,13 @@
 		\item[] {\textbf{Context:} adaptive, perfective and corrective banking software development. 
 }
 		\item[] {\textbf{Functions:} developing T-SQL queries and jobs. Adaptive, perfective and corrective banking application development.}		
-		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-green}{Skype/Skype for Business}, \textcolor{rainbowcolor-green}{Internet Explorer}, \textcolor{rainbowcolor-green}{MS Office Suite}, \textcolor{rainbowcolor-green}{MS SQL-Server 2005}, \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-indigo}{ASP classic}, \textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/XML},  \textcolor{rainbowcolor-orange}{Windows 10}.}		
+		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Skype/Skype for Business}, \textcolor{rainbowcolor-olive}{Internet Explorer}, \textcolor{rainbowcolor-olive}{MS Office Suite}, \textcolor{rainbowcolor-olive}{MS SQL-Server 2005}, \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-indigo}{ASP classic}, \textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/XML},  \textcolor{rainbowcolor-orange}{Windows 10}.}		
       \end{cvitems}
     } 
     
 %---------------------------------------------------------
   \cventry
-    {Software and Oracle Database Developer} % Job title
+    {Java and Oracle Database Developer} % Job title
     {} % Organization
     {} % Location
     {Jan. 2019 - June 2019} % Date(s)
@@ -43,7 +43,7 @@
 		\item[] {\textbf{Context:} account migration among banks, adaptive, perfective and corrective banking software development. 
 }
 		\item[] {\textbf{Functions:} inspecting PL-SQL queries, the sequence of queries, and then fine tuning those queries prior to sending data. Day to day support activities, investigate and address issues regarding quality of sent data with the business area. Adaptive, perfective and corrective banking software development.}		
-		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-green}{Redmine}, \textcolor{rainbowcolor-green}{Skype/Skype for Business}, \textcolor{rainbowcolor-green}{MS Office Suite}, \textcolor{rainbowcolor-green}{Apache AirFlow}, \textcolor{rainbowcolor-green}{Apache Ant}, \textcolor{rainbowcolor-green}{Apache Maven}, \textcolor{rainbowcolor-green}{Apache Tomcat}, \textcolor{rainbowcolor-green}{Apache Struts}, \textcolor{rainbowcolor-green}{Eclipse}, \textcolor{rainbowcolor-green}{Oracle SQL developer}, \textcolor{rainbowcolor-indigo}{PL-SQL}, \textcolor{rainbowcolor-indigo}{Java 6-8}, \textcolor{rainbowcolor-orange}{Windows 7/10}.}		
+		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Redmine}, \textcolor{rainbowcolor-olive}{Skype/Skype for Business}, \textcolor{rainbowcolor-olive}{MS Office Suite}, \textcolor{rainbowcolor-olive}{Apache AirFlow}, \textcolor{rainbowcolor-olive}{Apache Ant}, \textcolor{rainbowcolor-olive}{Apache Maven}, \textcolor{rainbowcolor-olive}{Apache Tomcat}, \textcolor{rainbowcolor-olive}{Apache Struts}, \textcolor{rainbowcolor-olive}{Eclipse}, \textcolor{rainbowcolor-olive}{Oracle SQL developer}, \textcolor{rainbowcolor-indigo}{PL-SQL}, \textcolor{rainbowcolor-indigo}{Java 6-8}, \textcolor{rainbowcolor-orange}{Windows 7/10}.}		
       \end{cvitems}
     } 
     
@@ -55,10 +55,10 @@
     {Feb. 2018 - Dec. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities      
-		\item[] {\textbf{Context:} Primary technical contact point with one or more clients, assisting in planning, debugging, and supervising ongoing critical business applications.}
+		\item[] {\textbf{Context:} Primary technical contact point with one or more clients, assisting in planning, debugging, and supervising ongoing critical business applications, Gamification and Workforce scheduling/monitoring for Contact Centers.}
 		\item[] {\textbf{Functions:} provide technical support for customers to support pre-sales and post-sales processes, address all product-related queries on time, create learning materials and train customers to use products effectively, assist in the creation of support documentation for existing software/service products, provide developers with customer's feedback to help identify potential new features or products, report on product performance, identify solutions to reduce support costs, analyze customer's needs and suggest upgrades or additional features to meet their requirements.}		
-		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-green}{Azure DevOps}, \textcolor{rainbowcolor-green}{TFS}, \textcolor{rainbowcolor-green}{IIS 6-8}, \textcolor{rainbowcolor-green}{VNC}, \textcolor{rainbowcolor-green}{mRemote}, \textcolor{rainbowcolor-green}{Cisco AnyConnect}, %Cisco VPN client, 
-\textcolor{rainbowcolor-green}{FortiClient}, \textcolor{rainbowcolor-green}{Teamviewer}, \textcolor{rainbowcolor-green}{Skype/Skype for Business}, \textcolor{rainbowcolor-green}{WebEx}, \textcolor{rainbowcolor-green}{MS Office Suite}, \textcolor{rainbowcolor-green}{Postman}, \textcolor{rainbowcolor-green}{SoapUI},\textcolor{rainbowcolor-green}{Zendesk}, \textcolor{rainbowcolor-green}{Internet Explorer}, \textcolor{rainbowcolor-green}{PowerBI}, \textcolor{rainbowcolor-green}{SSRS/SSIS/SSAS}, \textcolor{rainbowcolor-green}{MS SQL-server 2012-2017},  \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-orange}{Windows 7}.}		
+		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Azure DevOps}, \textcolor{rainbowcolor-olive}{TFS}, \textcolor{rainbowcolor-olive}{IIS 6-8}, \textcolor{rainbowcolor-olive}{VNC}, \textcolor{rainbowcolor-olive}{mRemote}, \textcolor{rainbowcolor-olive}{Cisco AnyConnect}, %Cisco VPN client, 
+\textcolor{rainbowcolor-olive}{FortiClient}, \textcolor{rainbowcolor-olive}{Teamviewer}, \textcolor{rainbowcolor-olive}{Skype/Skype for Business}, \textcolor{rainbowcolor-olive}{WebEx}, \textcolor{rainbowcolor-olive}{MS Office Suite}, \textcolor{rainbowcolor-olive}{Postman}, \textcolor{rainbowcolor-olive}{SoapUI},\textcolor{rainbowcolor-olive}{Zendesk}, \textcolor{rainbowcolor-olive}{Internet Explorer}, \textcolor{rainbowcolor-olive}{PowerBI}, \textcolor{rainbowcolor-olive}{SSRS/SSIS/SSAS}, \textcolor{rainbowcolor-olive}{MS SQL-server 2012-2017},  \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-orange}{Windows 7}.}		
       \end{cvitems}
     } 
     
@@ -72,14 +72,13 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities      
 		\item[] {\textbf{Context:} 
 Adaptive software development and integration with Model-Based architecture for an energy sector company. %(cannot disclose from which due to confidentiality agreement terms).
-Adaptive, perfective and corrective software maintenance for an information management system used in the areas of social action and health, %(cannot disclose from which due to confidentiality agreement terms)
-lets refer to it as X. Perfective and corrective software maintenance in the integration of a login functionality managed by Azure AD within a near release vacation management online solution, lets refer to it as Y.
-Adaptive, perfective and corrective software maintenance for an information management system used in the areas of social action and health %(cannot disclose from which due to confidentiality agreement terms)
-, lets refer to it as X.}
+Adaptive, perfective and corrective software maintenance for an information management system used in the areas of social action and health%(cannot disclose from which due to confidentiality agreement terms)
+, Aka X.
+Perfective and corrective software maintenance in the integration of an Azure AD login functionality within a vacation management online solution, Aka Y.}
 		\item[] {\textbf{Functions:} Integration of Uber-like functionalities into existing Model-Based architecture modules. PL-SQL database replication. Integration, algorithm development, and prototyping of route calculation and schedule assigning software into existing Model-Based architecture modules.
-		Extension and maintenance of all Model-View-Controller (MVC) functionalities, including models, views, controllers, and SQL scripts to update and include new functionalities on X database. Functional and aesthetic bug resolution in views, controllers, and models of X.
-		Study of Azure AD usage scenarios. Assessment on how to integrate (at the time) Y login process with Azure AD.}		
-		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-green}{Azure AD}, \textcolor{rainbowcolor-green}{Slack}, \textcolor{rainbowcolor-green}{TFS}, \textcolor{rainbowcolor-green}{Git}, \textcolor{rainbowcolor-green}{Visual Studio 2013 \& 2017}, \textcolor{rainbowcolor-green}{Visual Studio Code}, \textcolor{rainbowcolor-green}{MS SQL-server 2014 \& 2016}, \textcolor{rainbowcolor-green}{Oracle SQL developer}, \textcolor{rainbowcolor-indigo}{C\#}, \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-indigo}{PL-SQL}, \textcolor{rainbowcolor-indigo}{Angular2/4}, \textcolor{rainbowcolor-indigo}{JSP/jQuery/Ajax/JSON/Bootstrap}, \textcolor{rainbowcolor-indigo}{Node.js}, \textcolor{rainbowcolor-indigo}{JavaScript}, \textcolor{rainbowcolor-orange}{Windows 7}.}	
+		Extension and maintenance of all Model-View-Controller (MVC) functionalities to update and include new functionalities on X database. Functional and aesthetic bug resolution in views, controllers, and models of X.
+		Study of Azure AD usage scenarios. Y login integration with Azure AD.}		
+		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Azure AD}, \textcolor{rainbowcolor-olive}{Slack}, \textcolor{rainbowcolor-olive}{TFS}, \textcolor{rainbowcolor-olive}{Git}, \textcolor{rainbowcolor-olive}{Visual Studio 2013 \& 2017}, \textcolor{rainbowcolor-olive}{Visual Studio Code}, \textcolor{rainbowcolor-olive}{MS SQL-server 2014 \& 2016}, \textcolor{rainbowcolor-olive}{Oracle SQL developer}, \textcolor{rainbowcolor-indigo}{C\#}, \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-indigo}{PL-SQL}, \textcolor{rainbowcolor-indigo}{Angular2/4}, \textcolor{rainbowcolor-indigo}{JSP/jQuery/Ajax/JSON/Bootstrap}, \textcolor{rainbowcolor-indigo}{Node.js}, \textcolor{rainbowcolor-indigo}{JavaScript}, \textcolor{rainbowcolor-orange}{Windows 7}.}	
       \end{cvitems}
     } 
     
@@ -123,7 +122,7 @@ Adaptive, perfective and corrective software maintenance for an information mana
 		\item[] {\textbf{Context:} Study and ultimately attempt to Develop a game engine for MMOGs to work on the browser.}
 		\item[] {\textbf{Functions:} Develop a Java game engine prototype, to test state management algorithms. Assist in porting an existing multi-player game (Jake2) to a MMOFPS resorting to GridGain. Implement fluid simulators in the GPU. Elaboration and public presentation of scientific conference articles.}
 		\item[] {\textbf{Technologies:} %TexMaker, JabRef,
-\textcolor{rainbowcolor-indigo}{GridGain}, \textcolor{rainbowcolor-indigo}{Jgroups}, \textcolor{rainbowcolor-indigo}{JogAmp}, \textcolor{rainbowcolor-indigo}{Apache Math Commons}, \textcolor{rainbowcolor-indigo}{OpenGL}, \textcolor{rainbowcolor-indigo}{CUDA/OpenMP/OpenCL/MPI}
+\textcolor{rainbowcolor-olive}{NetBeans}, \textcolor{rainbowcolor-indigo}{GridGain}, \textcolor{rainbowcolor-indigo}{Jgroups}, \textcolor{rainbowcolor-indigo}{JogAmp}, \textcolor{rainbowcolor-indigo}{Apache Math Commons}, \textcolor{rainbowcolor-indigo}{OpenGL}, \textcolor{rainbowcolor-indigo}{CUDA/OpenMP/OpenCL/MPI}
 \textcolor{rainbowcolor-indigo}{Java 1.6}, \textcolor{rainbowcolor-indigo}{C/C++}, \textcolor{rainbowcolor-indigo}{LaTeX}, %\textcolor{rainbowcolor-indigo}{Beamer}, 
 \textcolor{rainbowcolor-orange}{Windows XP-7}.}
       \end{cvitems}
@@ -152,7 +151,7 @@ Adaptive, perfective and corrective software maintenance for an information mana
 %        \item[] {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory, and practical project joint assessment.}% with course supervisor	.}		
 		\item[] {\textbf{Context:} Lab. assistant in practical component of the video game technologies and computer graphics courses.}
 		\item[] {\textbf{Functions:} Develop lab. course material, including practical sheets and tests (available upon request). Responsible for 0.5 hour lecture and supervision of 1.5 hour lab. Participated in practical project joint assessment with course supervisor.}
-		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-green}{Whiteboard}, \textcolor{rainbowcolor-green}{LibreOffce}, \textcolor{rainbowcolor-green}{JmonkeyEngine}, \textcolor{rainbowcolor-green}{NetBeans}, \textcolor{rainbowcolor-indigo}{Java 1.6-1.8}, \textcolor{rainbowcolor-indigo}{LaTeX}, %\textcolor{rainbowcolor-indigo}{Beamer}, %TexMaker, JabRef,
+		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Whiteboard}, \textcolor{rainbowcolor-olive}{LibreOffce}, \textcolor{rainbowcolor-olive}{JmonkeyEngine}, \textcolor{rainbowcolor-olive}{NetBeans}, \textcolor{rainbowcolor-indigo}{Java 1.6-1.8}, \textcolor{rainbowcolor-indigo}{LaTeX}, %\textcolor{rainbowcolor-indigo}{Beamer}, %TexMaker, JabRef,
 \textcolor{rainbowcolor-orange}{Windows XP-7}.}
       \end{cvitems}
     }       
@@ -215,7 +214,7 @@ Adaptive, perfective and corrective software maintenance for an information mana
 		%\item[] {Research, implementation, and testing of novel modern ways to divulge a math department.}
 		\item[] {\textbf{Context:} Develop dynamic ways to dynamize a math department and math teaching at an university level.}
 		\item[] {\textbf{Functions:} Creation of dynamic contents (presentations and work sheets) for theoretical and laboratory mathematics courses, i.e., dynamic presentations intended to make math learning more interactive and available outside the class room.}
-  		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-green}{Blackboard}, \textcolor{rainbowcolor-green}{Mathematica}, \textcolor{rainbowcolor-green}{Matlab}, \textcolor{rainbowcolor-green}{LaTeX}, \textcolor{rainbowcolor-green}{Beamer}, %\textcolor{rainbowcolor-green}{TexMaker}, 
+  		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Blackboard}, \textcolor{rainbowcolor-olive}{Mathematica}, \textcolor{rainbowcolor-olive}{Matlab}, \textcolor{rainbowcolor-olive}{LaTeX}, \textcolor{rainbowcolor-olive}{Beamer}, %\textcolor{rainbowcolor-olive}{TexMaker}, 
   		\textcolor{rainbowcolor-orange}{Windows XP}.}
       \end{cvitems}
     }  
