--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -70,36 +70,36 @@
       \vspace{0.1cm}
       \begin{cvitems} % Description(s) 
         \item[] {        
-        \textcolor{rainbowcolor-green}{Azure DevOps\ref{5}{$^{[5]}$}},         
-        \textcolor{rainbowcolor-green}{Team Foundation Server (TFS)\ref{6}{$^{[6]}$}},
-        \textcolor{rainbowcolor-green}{Zendesk\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-green}{Redmine\ref{5}{$^{[5]}$}},
-        %\textcolor{rainbowcolor-green}{Slack\ref{5}{$^{[5]}$}}, 
-        \textcolor{rainbowcolor-green}{Git\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}}, 
-        \textcolor{rainbowcolor-green}{SVN\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-green}{Apache Maven\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-green}{Apache Ant\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},  
-        \textcolor{rainbowcolor-green}{Apache Tomcat\ref{5}{$^{[5]}$}}, 
-        %\textcolor{rainbowcolor-green}{Blender\ref{2}{$^{[2]}$}}, 
-        %\textcolor{rainbowcolor-green}{JMonkeyEngine\ref{2}{$^{[2]}$}}, 
-        \textcolor{rainbowcolor-green}{LibreOffice\ref{4}{$^{[4]}$}}, 
-        \textcolor{rainbowcolor-green}{Eclipse\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}},  
-        \textcolor{rainbowcolor-green}{Netbeans\ref{4}{$^{[4]}$}}, 
-        \textcolor{rainbowcolor-green}{Oracle SQL developer\ref{6}{$^{[6]}$}},
-        \textcolor{rainbowcolor-green}{Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-green}{Visual Studio Code\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-green}{MS Office Suite\ref{6}{$^{[6]}$}},
-        \textcolor{rainbowcolor-green}{MS SQL-server 2012-2017\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}},
-		%\textcolor{rainbowcolor-green}{SSRS/SSIS/SSAS\ref{5}{$^{[5]}$}},
-		\textcolor{rainbowcolor-green}{PowerBI\ref{5}{$^{[5]}$}}, 
-        \textcolor{rainbowcolor-green}{Skype/Skype for Business\ref{5}{$^{[5]}$}},
-        %\textcolor{rainbowcolor-green}{WebEx\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-green}{Google Chrome\ref{6}{$^{[6]}$}},                
-        \textcolor{rainbowcolor-green}{Internet Explorer\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}},
-        \textcolor{rainbowcolor-green}{Teamviewer\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-green}{SoapUI\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-green}{Postman\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-green}{Swagger\ref{5}{$^{[5]}$}},        
+        \textcolor{rainbowcolor-olive}{Azure DevOps\ref{5}{$^{[5]}$}},         
+        \textcolor{rainbowcolor-olive}{Team Foundation Server (TFS)\ref{6}{$^{[6]}$}},
+        \textcolor{rainbowcolor-olive}{Zendesk\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-olive}{Redmine\ref{5}{$^{[5]}$}},
+        %\textcolor{rainbowcolor-olive}{Slack\ref{5}{$^{[5]}$}}, 
+        \textcolor{rainbowcolor-olive}{Git\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}}, 
+        \textcolor{rainbowcolor-olive}{SVN\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-olive}{Apache Maven\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-olive}{Apache Ant\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},  
+        \textcolor{rainbowcolor-olive}{Apache Tomcat\ref{5}{$^{[5]}$}}, 
+        %\textcolor{rainbowcolor-olive}{Blender\ref{2}{$^{[2]}$}}, 
+        %\textcolor{rainbowcolor-olive}{JMonkeyEngine\ref{2}{$^{[2]}$}}, 
+        \textcolor{rainbowcolor-olive}{LibreOffice\ref{4}{$^{[4]}$}}, 
+        \textcolor{rainbowcolor-olive}{Eclipse\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}},  
+        \textcolor{rainbowcolor-olive}{Netbeans\ref{4}{$^{[4]}$}}, 
+        \textcolor{rainbowcolor-olive}{Oracle SQL developer\ref{6}{$^{[6]}$}},
+        \textcolor{rainbowcolor-olive}{Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-olive}{Visual Studio Code\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-olive}{MS Office Suite\ref{6}{$^{[6]}$}},
+        \textcolor{rainbowcolor-olive}{MS SQL-server 2012-2017\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}},
+		%\textcolor{rainbowcolor-olive}{SSRS/SSIS/SSAS\ref{5}{$^{[5]}$}},
+		\textcolor{rainbowcolor-olive}{PowerBI\ref{5}{$^{[5]}$}}, 
+        \textcolor{rainbowcolor-olive}{Skype/Skype for Business\ref{5}{$^{[5]}$}},
+        %\textcolor{rainbowcolor-olive}{WebEx\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-olive}{Google Chrome\ref{6}{$^{[6]}$}},                
+        \textcolor{rainbowcolor-olive}{Internet Explorer\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}},
+        \textcolor{rainbowcolor-olive}{Teamviewer\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-olive}{SoapUI\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-olive}{Postman\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-olive}{Swagger\ref{5}{$^{[5]}$}},        
         %\textbf{Mozilla Firefox} 
         %\textbf{Gimp}
         %\textbf{WhatsApp}\ref{5}{$^{[5]}$}
@@ -107,12 +107,12 @@
         %\textbf{UmbreloUML}\ref{2}{$^{[2]}$},
         %\textbf{Omnet++}\ref{2}{$^{[2]}$},
         %\textbf{Android Studio},
-        %\textcolor{rainbowcolor-green}{Texmaker \& JabRef\ref{4}{$^{[4]}$}}, 
-        \textcolor{rainbowcolor-green}{IIS 6-8\ref{5}{$^{[5]}$}}.%,
-        %\textcolor{rainbowcolor-green}{VNC\ref{5}{$^{[5]}$}},
-        %\textcolor{rainbowcolor-green}{mRemote\ref{5}{$^{[5]}$}},
-        %\textcolor{rainbowcolor-green}{Cisco AnyConnect\ref{5}{$^{[5]}$}}, %Cisco VPN client, 
-		%\textcolor{rainbowcolor-green}{FortiClient\ref{5}{$^{[5]}$}}.
+        %\textcolor{rainbowcolor-olive}{Texmaker \& JabRef\ref{4}{$^{[4]}$}}, 
+        \textcolor{rainbowcolor-olive}{IIS 6-8\ref{5}{$^{[5]}$}}.%,
+        %\textcolor{rainbowcolor-olive}{VNC\ref{5}{$^{[5]}$}},
+        %\textcolor{rainbowcolor-olive}{mRemote\ref{5}{$^{[5]}$}},
+        %\textcolor{rainbowcolor-olive}{Cisco AnyConnect\ref{5}{$^{[5]}$}}, %Cisco VPN client, 
+		%\textcolor{rainbowcolor-olive}{FortiClient\ref{5}{$^{[5]}$}}.
 		}
       \end{cvitems}
     }  
