--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -65,15 +65,15 @@
 }
 %\address{Rua das Oper\'arias Conserveiras, n.$^o$ 15, 2520-639, Peniche, Portugal}
 
-%\mobile{(+351) 96-281-68-58} 
+\mobile{(+351) 962-816-858} 
 \email{g.n.p.amador@gmail.com}
 %\homepage{www.posquit0.com}
-\github{g-amador}
+\github{github.com/g-amador}
 %\bitbucket{g-amador}
 %\stackoverflow{SO-id}{SO-name}
 %\orcid{0000-0001-5798-2701} %No icon not working yet
 %\researchgate{Goncalo\_Amador} %No icon not working yet
-\linkedin{g-amador}
+\linkedin{www.linkedin.com/in/g-amador}
 %\twitter{@twit}
 %\skype{gnpa\_skype}
 %\reddit{reddit-id}
