"Updated certification & experience."

--- a/examples/resume/certifications.tex
+++ b/examples/resume/certifications.tex
@@ -13,11 +13,27 @@
 
 %---------------------------------------------------------
   \cventry
-    {Build Mobile Applications with SAP Cloud Platform Mobile Services (227.8/300)} % Certificate designation
+    {SAP Intelligent Robotic Process Automation in a Nutshell (24.0/30)} % Certificate designation
     {\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
     {Online} % Location
     %{} % Location
-    %{June 13, 2018 - July 26, 2018} % Date(s)      
+    %{Sept 17, 2018 - Oct 16, 2018} % Date(s)      
+    {Sept. 2019 - Oct. 2019} % Date(s)          
+    {
+	    \begin{cvitems} % Description(s) of tasks/responsibilities  
+        \item[] {Online Certificate: \url{https://open.sap.com/verify/xolav-kibal-bifaf-kyfid-rysek}} %Certificate URL 
+        \item[] {Valid from July 1, 2020 - Present} % Validity
+      \end{cvitems}
+    }
+    \vspace{-0.1cm}
+%---------------------------------------------------------
+  \cventry
+    {Build Mobile Applications with SAP Cloud Platform Mobile Services (227.8/300)} % Certificate designation
+    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+    {} % Certifacion entity
+    %{Online} % Location
+    {} % Location
+    %{Aug 20, 2018 - Oct 02, 2018} % Date(s)      
     {Aug. 2019 - Oct. 2019} % Date(s)          
     {
 	    \begin{cvitems} % Description(s) of tasks/responsibilities  
