--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -22,7 +22,7 @@
     {ASP classic Developer} % Job title
     {\href{https://www.amaris.com/}{Amaris} \textbf{(Professional)}} % Organization
     {Lisbon, Portugal} % Location
-    {June 2019 - Present} % Date(s)
+    {June 2019 - May 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities      
 		\item[] {\textbf{Context:} adaptive, perfective and corrective banking software development. 
