--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -19,6 +19,15 @@
 
 %---------------------------------------------------------
   \cventry
+    {Support Engineer} % Job title
+    {\href{https://www.axians.pt/pt/}{Axians} \textbf{(Professional)}} % Organization
+    {Lisbon, Portugal} % Location
+    {Aug. 2020 - Present} % Date(s)
+    {
+    } 
+
+%---------------------------------------------------------
+  \cventry
     {ASP classic Developer} % Job title
     {\href{https://www.amaris.com/}{Amaris} \textbf{(Professional)}} % Organization
     {Lisbon, Portugal} % Location
@@ -56,7 +65,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities      
 		\item[] {\textbf{Context:} Primary technical contact point with one or more clients, assisting in planning, debugging, and supervising ongoing critical business applications, Gamification and Workforce scheduling/monitoring for Contact Centers.}
-		\item[] {\textbf{Functions:} provide technical support for customers to support pre-sales and post-sales processes, address all product-related queries on time, create learning materials and train customers to use products effectively, assist in the creation of support documentation for existing software/service products, provide developers with customer's feedback to help identify potential new features or products, report on product performance, identify solutions to reduce support costs, analyze customer's needs and suggest upgrades or additional features to meet their requirements.}		
+		\item[] {\textbf{Functions:} provide technical support for customers to support pre-sales and post-sales processes, address all product-related queries on time, create learning materials and train customers to use products effectively, assist in the creation of support documentation for existing software/service products, provide developers with customer's feedback to help identify potential new features or products, report on product performance, identify solutions to reduce support costs, analyse customer's needs and suggest upgrades or additional features to meet their requirements.}		
 		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Azure DevOps}, \textcolor{rainbowcolor-olive}{TFS}, \textcolor{rainbowcolor-olive}{IIS 6-8}, \textcolor{rainbowcolor-olive}{VNC}, \textcolor{rainbowcolor-olive}{mRemote}, \textcolor{rainbowcolor-olive}{Cisco AnyConnect}, %Cisco VPN client, 
 \textcolor{rainbowcolor-olive}{FortiClient}, \textcolor{rainbowcolor-olive}{Teamviewer}, \textcolor{rainbowcolor-olive}{Skype/Skype for Business}, \textcolor{rainbowcolor-olive}{WebEx}, \textcolor{rainbowcolor-olive}{MS Office Suite}, \textcolor{rainbowcolor-olive}{Postman}, \textcolor{rainbowcolor-olive}{SoapUI}, \textcolor{rainbowcolor-olive}{Zendesk}, \textcolor{rainbowcolor-olive}{Internet Explorer}, \textcolor{rainbowcolor-olive}{PowerBI}, \textcolor{rainbowcolor-olive}{SSRS/SSIS/SSAS}, \textcolor{rainbowcolor-olive}{MS SQL-server 2012-2017},  \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-orange}{Windows 7}.}		
       \end{cvitems}
