"Updating skills, and experience."

--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -24,6 +24,9 @@
     {Lisbon, Portugal} % Location
     {Aug. 2020 - Present} % Date(s)
     {
+      \begin{cvitems} % Description(s) of tasks/responsibilities      	
+		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Google Chrome}, \textcolor{rainbowcolor-olive}{MS Edge}, \textcolor{rainbowcolor-olive}{Internet Explorer}, \textcolor{rainbowcolor-olive}{MS Teams}, \textcolor{rainbowcolor-olive}{MS Office Suite}, \textcolor{rainbowcolor-orange}{Windows 10}.}			
+      \end{cvitems}		
     } 
 
 %---------------------------------------------------------
@@ -37,7 +40,7 @@
 		\item[] {\textbf{Context:} adaptive, perfective and corrective banking software development. 
 }
 		\item[] {\textbf{Functions:} developing T-SQL queries and jobs. Adaptive, perfective and corrective banking application development.}		
-		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Skype/Skype for Business}, \textcolor{rainbowcolor-olive}{Internet Explorer}, \textcolor{rainbowcolor-olive}{MS Office Suite}, \textcolor{rainbowcolor-olive}{MS SQL-Server 2005}, \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-indigo}{ASP classic}, \textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/XML},  \textcolor{rainbowcolor-orange}{Windows 10}.}		
+		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Google Chrome}, \textcolor{rainbowcolor-olive}{Skype}, \textcolor{rainbowcolor-olive}{Internet Explorer}, \textcolor{rainbowcolor-olive}{MS Office Suite}, \textcolor{rainbowcolor-olive}{MS SQL-Server 2005}, \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-indigo}{ASP classic}, \textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/XML},  \textcolor{rainbowcolor-orange}{Windows 10}.}		
       \end{cvitems}
     } 
     
@@ -52,7 +55,7 @@
 		\item[] {\textbf{Context:} account migration among banks, adaptive, perfective and corrective banking software development. 
 }
 		\item[] {\textbf{Functions:} inspecting PL-SQL queries, the sequence of queries, and then fine tuning those queries prior to sending data. Day to day support activities, investigate and address issues regarding quality of sent data with the business area. Adaptive, perfective and corrective banking software development.}		
-		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Redmine}, \textcolor{rainbowcolor-olive}{Skype/Skype for Business}, \textcolor{rainbowcolor-olive}{MS Office Suite}, \textcolor{rainbowcolor-olive}{Apache AirFlow}, \textcolor{rainbowcolor-olive}{Apache Ant}, \textcolor{rainbowcolor-olive}{Apache Maven}, \textcolor{rainbowcolor-olive}{Apache Tomcat}, \textcolor{rainbowcolor-olive}{Apache Struts}, \textcolor{rainbowcolor-olive}{Eclipse}, \textcolor{rainbowcolor-olive}{Oracle SQL developer}, \textcolor{rainbowcolor-indigo}{PL-SQL}, \textcolor{rainbowcolor-indigo}{Java 6-8}, \textcolor{rainbowcolor-orange}{Windows 7/10}.}		
+		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Google Chrome}, \textcolor{rainbowcolor-olive}{Redmine}, \textcolor{rainbowcolor-olive}{Skype}, \textcolor{rainbowcolor-olive}{MS Office Suite}, \textcolor{rainbowcolor-olive}{Apache AirFlow}, \textcolor{rainbowcolor-olive}{Apache Ant}, \textcolor{rainbowcolor-olive}{Apache Maven}, \textcolor{rainbowcolor-olive}{Apache Tomcat}, \textcolor{rainbowcolor-olive}{Apache Struts}, \textcolor{rainbowcolor-olive}{Eclipse}, \textcolor{rainbowcolor-olive}{Oracle SQL developer}, \textcolor{rainbowcolor-indigo}{PL-SQL}, \textcolor{rainbowcolor-indigo}{Java 6-8}, \textcolor{rainbowcolor-orange}{Windows 7/10}.}		
       \end{cvitems}
     } 
     
@@ -66,8 +69,9 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities      
 		\item[] {\textbf{Context:} Primary technical contact point with one or more clients, assisting in planning, debugging, and supervising ongoing critical business applications, Gamification and Workforce scheduling/monitoring for Contact Centers.}
 		\item[] {\textbf{Functions:} provide technical support for customers to support pre-sales and post-sales processes, address all product-related queries on time, create learning materials and train customers to use products effectively, assist in the creation of support documentation for existing software/service products, provide developers with customer's feedback to help identify potential new features or products, report on product performance, identify solutions to reduce support costs, analyse customer's needs and suggest upgrades or additional features to meet their requirements.}		
-		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Azure DevOps}, \textcolor{rainbowcolor-olive}{TFS}, \textcolor{rainbowcolor-olive}{IIS 6-8}, \textcolor{rainbowcolor-olive}{VNC}, \textcolor{rainbowcolor-olive}{mRemote}, \textcolor{rainbowcolor-olive}{Cisco AnyConnect}, %Cisco VPN client, 
-\textcolor{rainbowcolor-olive}{FortiClient}, \textcolor{rainbowcolor-olive}{Teamviewer}, \textcolor{rainbowcolor-olive}{Skype/Skype for Business}, \textcolor{rainbowcolor-olive}{WebEx}, \textcolor{rainbowcolor-olive}{MS Office Suite}, \textcolor{rainbowcolor-olive}{Postman}, \textcolor{rainbowcolor-olive}{SoapUI}, \textcolor{rainbowcolor-olive}{Zendesk}, \textcolor{rainbowcolor-olive}{Internet Explorer}, \textcolor{rainbowcolor-olive}{PowerBI}, \textcolor{rainbowcolor-olive}{SSRS/SSIS/SSAS}, \textcolor{rainbowcolor-olive}{MS SQL-server 2012-2017},  \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-orange}{Windows 7}.}		
+		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Google Chrome}, \textcolor{rainbowcolor-olive}{Internet Explorer}, \textcolor{rainbowcolor-olive}{Azure DevOps}, \textcolor{rainbowcolor-olive}{TFS}, \textcolor{rainbowcolor-olive}{IIS 6-8}, %\textcolor{rainbowcolor-olive}{VNC}, \textcolor{rainbowcolor-olive}{mRemote}, \textcolor{rainbowcolor-olive}{Cisco AnyConnect}, %Cisco VPN client, 
+%\textcolor{rainbowcolor-olive}{FortiClient}, 
+\textcolor{rainbowcolor-olive}{Teamviewer}, \textcolor{rainbowcolor-olive}{Skype}, \textcolor{rainbowcolor-olive}{WebEx}, \textcolor{rainbowcolor-olive}{MS Office Suite}, \textcolor{rainbowcolor-olive}{Postman}, \textcolor{rainbowcolor-olive}{SoapUI}, \textcolor{rainbowcolor-olive}{Zendesk}, \textcolor{rainbowcolor-olive}{PowerBI}, \textcolor{rainbowcolor-olive}{SSRS/SSIS/SSAS}, \textcolor{rainbowcolor-olive}{MS SQL-server 2012-2017},  \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-orange}{Windows 7}.}		
       \end{cvitems}
     } 
     
@@ -87,7 +91,7 @@ Perfective and corrective software maintenance in the integration of an Azure AD
 		\item[] {\textbf{Functions:} Integration of Uber-like functionalities into existing Model-Based architecture modules. PL-SQL database replication. Integration, algorithm development, and prototyping of route calculation and schedule assigning software into existing Model-Based architecture modules.
 		Extension and maintenance of all Model-View-Controller (MVC) functionalities to update and include new functionalities on X database. Functional and aesthetic bug resolution in views, controllers, and models of X.
 		Study of Azure AD usage scenarios. Y login integration with Azure AD.}		
-		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Azure AD}, \textcolor{rainbowcolor-olive}{Slack}, \textcolor{rainbowcolor-olive}{TFS}, \textcolor{rainbowcolor-olive}{Git}, \textcolor{rainbowcolor-olive}{Visual Studio 2013 \& 2017}, \textcolor{rainbowcolor-olive}{Visual Studio Code}, \textcolor{rainbowcolor-olive}{MS SQL-server 2014 \& 2016}, \textcolor{rainbowcolor-olive}{Oracle SQL developer}, \textcolor{rainbowcolor-indigo}{C\#}, \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-indigo}{PL-SQL}, \textcolor{rainbowcolor-indigo}{Angular2/4}, \textcolor{rainbowcolor-indigo}{JSP/jQuery/Ajax/JSON/Bootstrap}, \textcolor{rainbowcolor-indigo}{Node.js}, \textcolor{rainbowcolor-indigo}{JavaScript}, \textcolor{rainbowcolor-orange}{Windows 7}.}	
+		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Google Chrome}, \textcolor{rainbowcolor-olive}{Azure AD}, \textcolor{rainbowcolor-olive}{Slack}, \textcolor{rainbowcolor-olive}{TFS}, \textcolor{rainbowcolor-olive}{Git}, \textcolor{rainbowcolor-olive}{Visual Studio 2013 \& 2017}, \textcolor{rainbowcolor-olive}{Visual Studio Code}, \textcolor{rainbowcolor-olive}{MS SQL-server 2014 \& 2016}, \textcolor{rainbowcolor-olive}{Oracle SQL developer}, \textcolor{rainbowcolor-indigo}{C\#}, \textcolor{rainbowcolor-indigo}{T-SQL}, \textcolor{rainbowcolor-indigo}{PL-SQL}, \textcolor{rainbowcolor-indigo}{Angular2/4}, \textcolor{rainbowcolor-indigo}{JSP/jQuery/Ajax/JSON/Bootstrap}, \textcolor{rainbowcolor-indigo}{Node.js}, \textcolor{rainbowcolor-indigo}{JavaScript}, \textcolor{rainbowcolor-orange}{Windows 7}.}	
       \end{cvitems}
     } 
     
@@ -131,7 +135,9 @@ Perfective and corrective software maintenance in the integration of an Azure AD
 		\item[] {\textbf{Context:} Study and ultimately attempt to Develop a game engine for MMOGs to work on the browser.}
 		\item[] {\textbf{Functions:} Develop a Java game engine prototype, to test state management algorithms. Assist in porting an existing multi-player game (Jake2) to a MMOFPS resorting to GridGain. Implement fluid simulators in the GPU. Elaboration and public presentation of scientific conference articles.}
 		\item[] {\textbf{Technologies:} %TexMaker, JabRef,
-\textcolor{rainbowcolor-olive}{NetBeans}, \textcolor{rainbowcolor-indigo}{GridGain}, \textcolor{rainbowcolor-indigo}{Jgroups}, \textcolor{rainbowcolor-indigo}{JogAmp}, \textcolor{rainbowcolor-indigo}{Apache Math Commons}, \textcolor{rainbowcolor-indigo}{OpenGL}, \textcolor{rainbowcolor-indigo}{CUDA/OpenMP/OpenCL/MPI}
+\textcolor{rainbowcolor-olive}{Google Chrome}, 
+\textcolor{rainbowcolor-olive}{NetBeans}, 
+\textcolor{rainbowcolor-indigo}{GridGain}, \textcolor{rainbowcolor-indigo}{Jgroups}, \textcolor{rainbowcolor-indigo}{JogAmp}, \textcolor{rainbowcolor-indigo}{Apache Math Commons}, \textcolor{rainbowcolor-indigo}{OpenGL}, \textcolor{rainbowcolor-indigo}{CUDA/OpenMP/OpenCL/MPI}
 \textcolor{rainbowcolor-indigo}{Java 1.6}, \textcolor{rainbowcolor-indigo}{C/C++}, \textcolor{rainbowcolor-indigo}{LaTeX}, %\textcolor{rainbowcolor-indigo}{Beamer}, 
 \textcolor{rainbowcolor-orange}{Windows XP-7}.}
       \end{cvitems}
@@ -223,7 +229,7 @@ Perfective and corrective software maintenance in the integration of an Azure AD
 		%\item[] {Research, implementation, and testing of novel modern ways to divulge a math department.}
 		\item[] {\textbf{Context:} Develop dynamic ways to dynamize a math department and math teaching at an university level.}
 		\item[] {\textbf{Functions:} Creation of dynamic contents (presentations and work sheets) for theoretical and laboratory mathematics courses, i.e., dynamic presentations intended to make math learning more interactive and available outside the class room.}
-  		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Blackboard}, \textcolor{rainbowcolor-olive}{Mathematica}, \textcolor{rainbowcolor-olive}{Matlab}, \textcolor{rainbowcolor-olive}{LaTeX}, \textcolor{rainbowcolor-olive}{Beamer}, %\textcolor{rainbowcolor-olive}{TexMaker}, 
+  		\item[] {\textbf{Technologies:} \textcolor{rainbowcolor-olive}{Blackboard}, \textcolor{rainbowcolor-olive}{Mathematica}, \textcolor{rainbowcolor-olive}{Matlab}, \textcolor{rainbowcolor-olive}{LaTeX}, %\textcolor{rainbowcolor-olive}{Beamer}, %\textcolor{rainbowcolor-olive}{TexMaker}, 
   		\textcolor{rainbowcolor-orange}{Windows XP}.}
       \end{cvitems}
     }  
