--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -92,14 +92,18 @@
         \textcolor{rainbowcolor-olive}{MS SQL-server 2012-2017\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}},
 		%\textcolor{rainbowcolor-olive}{SSRS/SSIS/SSAS\ref{5}{$^{[5]}$}},
 		\textcolor{rainbowcolor-olive}{PowerBI\ref{5}{$^{[5]}$}}, 
-        \textcolor{rainbowcolor-olive}{Skype/Skype for Business\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-olive}{Skype\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-olive}{MS Teams\ref{5}{$^{[5]}$}},
         %\textcolor{rainbowcolor-olive}{WebEx\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{Google Chrome\ref{6}{$^{[6]}$}},                
+        \textcolor{rainbowcolor-olive}{Google Chrome\ref{4}{$^{[4]}$}\ref{7}{$^{[7]}$}},
+        \textcolor{rainbowcolor-olive}{MS Edge\ref{5}{$^{[5]}$}},
         \textcolor{rainbowcolor-olive}{Internet Explorer\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}},
         \textcolor{rainbowcolor-olive}{Teamviewer\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
         \textcolor{rainbowcolor-olive}{SoapUI\ref{5}{$^{[5]}$}},
         \textcolor{rainbowcolor-olive}{Postman\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{Swagger\ref{5}{$^{[5]}$}},        
+        \textcolor{rainbowcolor-olive}{Swagger\ref{5}{$^{[5]}$}},    
+        \textcolor{rainbowcolor-olive}{Wireshark\ref{5}{$^{[5]}$}},    
+        \textcolor{rainbowcolor-olive}{Fiddler Everywhere\ref{5}{$^{[5]}$}},  
         %\textbf{Mozilla Firefox} 
         %\textbf{Gimp}
         %\textbf{WhatsApp}\ref{5}{$^{[5]}$}
