--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -65,7 +65,7 @@
 }
 %\address{Rua das Oper\'arias Conserveiras, n.$^o$ 15, 2520-639, Peniche, Portugal}
 
-\mobile{(+351) 962-816-858} 
+%\mobile{(+351) 962-816-858} 
 \email{g.n.p.amador@gmail.com}
 %\homepage{www.posquit0.com}
 \github{github.com/g-amador}
