--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -100,9 +100,9 @@
         \textcolor{rainbowcolor-olive}{Internet Explorer\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}},
         \textcolor{rainbowcolor-olive}{Teamviewer\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
         \textcolor{rainbowcolor-olive}{SoapUI\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{Postman\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-olive}{Postman\ref{6}{$^{[6]}$}},
         \textcolor{rainbowcolor-olive}{Swagger\ref{5}{$^{[5]}$}},    
-        \textcolor{rainbowcolor-olive}{Wireshark\ref{5}{$^{[5]}$}},    
+        \textcolor{rainbowcolor-olive}{Wireshark\ref{1}{$^{[1]}$}\ref{5}{$^{[5]}$}},    
         \textcolor{rainbowcolor-olive}{Fiddler Everywhere\ref{5}{$^{[5]}$}},  
         %\textbf{Mozilla Firefox} 
         %\textbf{Gimp}
